<resources>
    <string name="app_name">omnifidelidade</string>

    <!-- Common -->
    <string name="common_next">Próximo</string>
    <string name="common_finish">Avançar</string>
    <string name="login_action_bar_title"></string>
    <string name="preference_file_key">preferences</string>

    <!-- App Menu -->
    <string name="app_menu_home">Home</string>
    <string name="app_menu_atividades">Extrato</string>
    <string name="app_menu_notificacoes">Notificações</string>
    <string name="app_menu_mais">Mais</string>

    <!-- atividades Fragment -->

    <string name="atividades_screen_title">Extrato</string>
    <string name="atividades_valor_compra_label">Valor da compra</string>
    <string name="atividades_valor_cashback_label">Cashback gerado</string>
    <string name="atividades_data_ativacao_label">Data de ativação</string>
    <string name="atividades_valor_utilizado_label">Valor utilizado</string>
    <string name="atividades_data_compra_label">Data da compra</string>
    <string name="atividades_data_validade_label">Validade</string>
    <string name="atividades_data_utilizacao_label">Data de utilização</string>

    <!-- cashback Fragment -->
    <string name="cashback_screen_title">Home</string>

    <!-- cashback detail Fragment -->
    <string name="cashback_datail_screen_title">Cashback</string>

    <!-- Login Fragment -->
    <string name="login_input_layout_hint_username">Login</string>
    <string name="login_input_layout_hint_password">Senha</string>
    <string name="login_button_text_sign_in">Entrar</string>
    <string name="login_button_text_sign_up">Criar nova conta</string>
    <string name="login_input_layout_error_celular">Celular Inválido!</string>

    <!-- cliente -->
    <string name="cliente_screen_title">Criar Conta</string>
    <string name="cliente_input_layout_hint_nome">Nome</string>
    <string name="cliente_input_layout_hint_celular">Celular</string>
    <string name="cliente_input_layout_hint_cpf">CPF</string>
    <string name="cliente_input_layout_hint_email">Email</string>
    <string name="cliente_input_layout_hint_datanascimento">Data de Nascimento</string>
    <string name="cliente_input_layout_error_nome">Nome Inválido!</string>
    <string name="cliente_input_layout_error_celular">Celular Inválido!</string>
    <string name="cliente_input_layout_error_cpf">CPF Inválido!</string>
    <string name="cliente_input_layout_error_email">Email Inválido!</string>
    <string name="cliente_input_layout_error_datanascimento">Data de Nascimento Inválida!</string>

    <!-- notificacoes -->
    <string name="notificacoes_screen_title">Notificações</string>

    <!-- credenciais -->
    <string name="credenciais_screen_title">PIN</string>
    <string name="credenciais_input_layout_error_pin">PIN Inválido</string>
    <string name="credenciais_reenviar_button">Reenviar PIN</string>
    <string name="credenciais_text_name">%1$s, Bem Vindo!</string>

    <!--    opcoes-->
    <string name="opcoes_text_name">Olá, %1$s </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>