<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.astetech.omnifidelidade.ui.cashback.CashbackViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/loja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:maxLines="3"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Shopping Morumbi"/>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/dividerHorizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loja" />

        <TextView
            android:id="@+id/marca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loja"
            tools:text="New Balance" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/marca">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/left_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="0dp"
                android:layout_toStartOf="@+id/secondView">

                <TextView
                    android:id="@+id/valor_compra_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/atividades_valor_compra_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Valor da compra" />

                <TextView
                    android:id="@+id/valor_compra_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:layout_marginStart="8dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/valor_compra_label"
                    tools:text="R$ 900,00" />

                <TextView
                    android:id="@+id/valor_cashback_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="8dp"
                    android:padding="3dp"
                    android:text="@string/atividades_valor_cashback_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/valor_compra_text"
                    tools:text="Cashback gerado" />

                <TextView
                    android:id="@+id/valor_cashback_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:layout_marginStart="8dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/valor_cashback_label"
                    tools:text="R$ 90,00" />


                <TextView
                    android:id="@+id/data_ativacao_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="8dp"
                    android:padding="3dp"
                    android:text="@string/atividades_data_ativacao_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/valor_cashback_text"
                    tools:text="Data de ativação" />

                <TextView
                    android:id="@+id/data_ativacao_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:layout_marginStart="8dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/data_ativacao_label"
                    tools:text="13/05/2022" />

                <TextView
                    android:id="@+id/valor_utilizado_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="8dp"
                    android:padding="3dp"
                    android:text="@string/atividades_valor_utilizado_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/data_ativacao_text"
                    tools:text="Valor utilizado" />

                <TextView
                    android:id="@+id/valor_utilizado_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:layout_marginStart="8dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/valor_utilizado_label"
                    tools:text="R$ 90,00" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/secondView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/thirdLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:layout_toEndOf="@+id/secondView">

                <TextView
                    android:id="@+id/data_compra_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/atividades_data_compra_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Data da compra" />

                <TextView
                    android:id="@+id/data_compra_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/data_compra_label"
                    tools:text="13/05/2022" />

                <TextView
                    android:id="@+id/data_validade_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="96dp"
                    android:padding="3dp"
                    android:text="@string/atividades_data_validade_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/data_compra_text"
                    tools:text="Validade" />

                <TextView
                    android:id="@+id/data_validade_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/data_validade_label"
                    tools:text="13/05/2022" />

                <TextView
                    android:id="@+id/data_utilizacao_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:padding="3dp"
                    android:text="@string/atividades_data_utilizacao_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/data_validade_text"
                    tools:text="Data de utilização" />

                <TextView
                    android:id="@+id/data_utilizacao_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/data_utilizacao_label"
                    tools:text="13/05/2022" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>